--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -23,11 +23,11 @@
 apiVersion: skaffold/v3
 kind: Config
 metadata:
-  name: buch
+  name: auto
 # https://skaffold.dev/docs/pipeline-stages/builders
 #build:
 #  artifacts:
-#    - image: juergenzimmermann/buch
+#    - image: juergenzimmermann/auto
 #      # https://skaffold.dev/docs/pipeline-stages/builders/buildpacks
 #      buildpacks:
 #        builder: paketobuildpacks/builder:base
@@ -42,9 +42,9 @@ deploy:
   # Alternativen: Kustomize, kpt, kubectl
   helm:
     releases:
-      - name: buch
-        chartPath: extras/buch
-        valuesFiles: [extras/buch/values.yaml]
+      - name: auto
+        chartPath: extras/auto
+        valuesFiles: [extras/auto/values.yaml]
         namespace: acme
 # https://skaffold.dev/docs/environment/profiles
 profiles:
@@ -54,12 +54,12 @@ profiles:
     deploy:
       helm:
         releases:
-          - name: buch
-            chartPath: extras/buch
-            valuesFiles: [extras/buch/values.yaml, extras/buch/dev.yaml]
+          - name: auto
+            chartPath: extras/auto
+            valuesFiles: [extras/auto/values.yaml, extras/auto/dev.yaml]
             namespace: acme
     # https://skaffold.dev/docs/pipeline-stages/port-forwarding
     portForward:
       - resourceType: service
-        resourceName: buch
+        resourceName: auto
         port: 3000
