--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buch",
+  "name": "auto",
   "version": "1.0.0",
   "description": "Beispiel",
   "author": "Juergen Zimmermann",
@@ -22,7 +22,7 @@
     "test:ORIG": "jest",
     "pretest": "npm run copy-resources",
     "test": "jest --runInBand --forceExit --expand",
-    "test:beispiel": "jest --runInBand --forceExit --expand __tests__/buch/beispiel.test.ts",
+    "test:beispiel": "jest --runInBand --forceExit --expand __tests__/auto/beispiel.test.ts",
     "test:coverage": "npm t -- --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "asciidoctor": "node scripts/asciidoctor",
@@ -34,14 +34,14 @@
     "leasot": "leasot --exit-nicely src/**/*.ts",
     "invoke-webrequest": "pwsh -Command Invoke-WebRequest https://localhost:3000/00000000-0000-0000-0000-000000000001 -SslProtocol Tls13 -SkipCertificateCheck",
     "prepack": "npm run clean && npm run copy-resources && npm run tsc",
-    "pack": "pack build juergenzimmermann/buch:1.0.0 --builder paketobuildpacks/builder:base",
-    "postpack": "docker tag juergenzimmermann/buch:1.0.0 juergenzimmermann/buch:latest",
-    "pack:clear-cache": "pack build juergenzimmermann/buch:1.0.0 --builder paketobuildpacks/builder:base --clear-cache",
-    "pack:inspect": "pack inspect juergenzimmermann/buch:1.0.0",
+    "pack": "pack build juergenzimmermann/auto:1.0.0 --builder paketobuildpacks/builder:base",
+    "postpack": "docker tag juergenzimmermann/auto:1.0.0 juergenzimmermann/auto:latest",
+    "pack:clear-cache": "pack build juergenzimmermann/auto:1.0.0 --builder paketobuildpacks/builder:base --clear-cache",
+    "pack:inspect": "pack inspect juergenzimmermann/auto:1.0.0",
     "prettier": "prettier --cache --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
     "prettier:check": "prettier --cache --check \"src/**/*.ts\" \"__tests__/**/*.ts\"",
     "revealjs": "asciidoctor-revealjs extras/doc/folien/folien.adoc",
-    "rmi": "docker rmi juergenzimmermann/buch:1.0.0",
+    "rmi": "docker rmi juergenzimmermann/auto:1.0.0",
     "snyk:auth": "echo https://app.snyk.io/account && snyk auth",
     "snyk": "snyk test",
     "typedoc": "typedoc",
